-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 Beta 1
-
None
-
Windows 7 x64
vs2010 sp1
-
4f400eeec1eed2d41f351ffd3f160cbde133c5eb
QFont::cleanup(); and cleanupThreadData(); in QGuiApplicationPrivate::~QGuiApplicationPrivate() will trigger QFontCache::~QFontCache() function being called and at that time the platform_theme object still hold some fonts object, This will cause the QFontEngineData object hold by those fonts can never been deleted.
I have submit a change (https://codereview.qt-project.org/#change,23253) to fix this leak, but that change has been reverted (https://codereview.qt-project.org/#change,23615) due to the reason "The fix causes crashes on exit in Qt Declarative.". But I can not produce this crash on Windows 7, so the only thing I can do is to submit a bug report.