QPA/Mac: Fix resources leaking

Having static QFont instance leads to a resources leaking, since QFontCache
is unable to clean-up font engines when the application exits.

Relates to QTBUG-25434

Change-Id: I71d91094de27c07ab2434c415e4c28b6acab3646
Reviewed-by: David Faure (KDE) <faure@kde.org>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>